force-app/main/default/objects/Account/fields/Account_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Account_Past_Due__c</fullName>
    <label>Account Past Due (days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>