force-app/main/default/objects/Account/fields/Average_Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Spend__c</fullName>
    <label>Average Annual Spend</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>