force-app/main/default/objects/Account/fields/KW_Usage_per_100_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>KW_Usage_per_100_sq_ft__c</fullName>
    <label>KW Usage per 100 sq. ft.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>