force-app/main/default/objects/Account/fields/Product_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Product_Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Recommendation</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>